antiracismapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: antiracism-backend-service
spec:
  type: NodePort
  selector:
    app: antiracism
  ports:
    - protocol: TCP
      nodePort: 30003
      port: 8081
      targetPort: 4000
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: antiracism-backend-deployment 
  labels: 
    app: antiracism 
spec: 
  replicas: 3 
  selector: 
    matchLabels: 
      app: antiracism 
  template: 
    metadata: 
      labels: 
        app: antiracism 
    spec: 
      containers: 
      - name: antiracism-container 
        image: tvaskisalo/sof_con_2022:sof_con_backend 
        ports: 
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: antiracism-frontend-service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      nodePort: 30002
      port: 8091
      targetPort: 80
  selector:
    app: sof_con_frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antiracism-frontend-deployment
  labels:
    app: sof_con_frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sof_con_frontend
  template:
    metadata:
      labels:
        app: sof_con_frontend
    spec:
      containers:
      - name: antiracism-frontend-container
        image: tvaskisalo/sof_con_2022:sof_con_frontend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: PersistentVolume
metadata:
  name: z-volume
spec:
  capacity:
    storage: 3Gi
  accessModes:
    - ReadWriteOnce
  hostPath:
    path: "/app/data"
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: antiracism-pvc
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
---
apiVersion: networking.helm/v1
kind: Ingress
metadata:
  name: antiracism-gke-ingress
spec:
  ingressClassName: nginx-antiracism
  rules:
  - http:
      paths:
      - path: /external-api-antiracism
        pathType: ImplementationSpecific
        backend:
          service:
            name: test
            port:
              number: 8090

---apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    autopilot.gke.io/resource-adjustment: '{"input":{"containers":[{"name":"mongo"}]},"output":{"containers":[{"limits":{"cpu":"500m","ephemeral-storage":"1Gi","memory":"2Gi"},"requests":{"cpu":"500m","ephemeral-storage":"1Gi","memory":"2Gi"},"name":"mongo"}]},"modified":true}'
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2023-01-31T11:20:00Z"
  generation: 1
  labels:
    app: antiracismapp-db
  managedFields:
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:progressDeadlineSeconds: {}
        f:replicas: {}
        f:revisionHistoryLimit: {}
        f:selector: {}
        f:strategy:
          f:rollingUpdate:
            .: {}
            f:maxSurge: {}
            f:maxUnavailable: {}
          f:type: {}
        f:template:
          f:metadata:
            f:labels:
              .: {}
              f:app: {}
          f:spec:
            f:containers:
              k:{"name":"mongo"}:
                .: {}
                f:image: {}
                f:imagePullPolicy: {}
                f:name: {}
                f:resources: {}
                f:terminationMessagePath: {}
                f:terminationMessagePolicy: {}
            f:dnsPolicy: {}
            f:restartPolicy: {}
            f:schedulerName: {}
            f:securityContext: {}
            f:terminationGracePeriodSeconds: {}
    manager: kubectl-create
    operation: Update
    time: "2023-01-31T11:20:00Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:deployment.kubernetes.io/revision: {}
      f:status:
        f:availableReplicas: {}
        f:conditions:
          .: {}
          k:{"type":"Available"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
          k:{"type":"Progressing"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
        f:observedGeneration: {}
        f:readyReplicas: {}
        f:replicas: {}
        f:updatedReplicas: {}
    manager: kube-controller-manager
    operation: Update
    subresource: status
    time: "2023-02-04T15:24:08Z"
  name: antiracismapp-db
  namespace: default
  resourceVersion: "7836759"
  uid: ad9addd7-0e02-41f1-98b3-bfb868c2667b
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: antiracismapp-db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: antiracismapp-db
    spec:
      containers:
      - image: mongo
        imagePullPolicy: Always
        name: mongo
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/arch
        operator: Equal
        value: amd64
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-01-31T11:20:00Z"
    lastUpdateTime: "2023-01-31T11:21:57Z"
    message: ReplicaSet "antiracismapp-db-c9fd98947" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2023-02-04T15:24:08Z"
    lastUpdateTime: "2023-02-04T15:24:08Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
