antiracismapp_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: AntiRacism_backend
spec:
  selector:
    app: antiracism_backend
  ports:
  - name: http
    port: 80
    targetPort: 6060
  type: ClusterIP
---
apiVersion: antiracism-backend/v1
kind: Deployment
metadata:
  name: antiracism-backend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: antiracism
  template:
    metadata:
      labels:
        app: antiracism
    spec:
      containers:
      - name: antiracism-backend
        image: sef_con_backend:latest
        ports:
        - containerPort: 6060
      volumes:
        - name: mongodb
          persistentVolumeClaim:
            claimName: antiracism-backend-pvc
